Closed
Bug 380976
Opened 19 years ago
Closed 19 years ago
Tree Table Hierarchy Broken in Thunderbird effective 5/09
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jdiggs, Assigned: aaronlev)
References
(Blocks 2 open bugs)
Details
(Keywords: access)
Attachments
(1 file)
|
2.66 KB,
patch
|
ginnchen+exoracle
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.1.3) Gecko/20061201 Firefox/2.0.0.3 (Ubuntu-feisty)
Build Identifier:
Beginning with the 5/09 build of Thunderbird, items that should have the role of table_cell now have role unknown. This problem persists through today's build (5/16),
Reproducible: Always
Steps to Reproduce:
1. Launch Thunderbird 5/08 build
2. Use Accerciser to explore the contents of the inbox or address book
3. Launch Thunderbird 5/09 build
4. Use Accerciser to explore the contents of the inbox or address book
Actual Results:
Structure 5/08:
- Tree table
- List
- Column Header 1
- Column Header 2
- [...]
- Table cell for column 1, item 1 (name is cell contents)
- Table cell for column 2, item 1 (name is cell contents)
- [...]
Structure 5/09 to present:
- Tree table
- List
- Column Header 1
- Unknown
- Column Header 2
- Unknown
- [...]
- Unknown (no name)
- Unknown (no name)
- [...]
Expected Results:
Instead of the unknowns found in the 5/09+ builds, there would be table_cells whose name contained the cell contents as was the case in the pre-5/09 builds.
In some of the post 5/09 builds (e.g. 5/16), not even all of the column headers are present in the list. Instead I find the first column header followed by a series of role unknowns.
| Reporter | ||
Updated•19 years ago
|
| Assignee | ||
Comment 1•19 years ago
|
||
Is bug 380985 a dupe of this?
| Reporter | ||
Comment 2•19 years ago
|
||
Actually, it seems that it is. Sorry about that! I searched first, but apparently not hard enough.
| Assignee | ||
Comment 3•19 years ago
|
||
This bug has better details anyway.
| Assignee | ||
Comment 5•19 years ago
|
||
Bug 381119 may be the same issue.
| Assignee | ||
Comment 6•19 years ago
|
||
This was a regression from bug 301621, where we started creating accessible objects for elements with an onclick. As a result, a generic accessible was being created for <xul:treechildren> and that was interfering with nsXULTreeAccessible's ability to create its children.
Attachment #265337 -
Flags: review?
| Assignee | ||
Updated•19 years ago
|
Attachment #265337 -
Flags: review? → review?(ginn.chen)
Attachment #265337 -
Flags: review?(ginn.chen) → review+
| Assignee | ||
Updated•19 years ago
|
Status: UNCONFIRMED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•