Bug 380976. Tree view accessible hierarchy regression. r=ginn.chen